--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                   <div class="card">
                     <h2>Featured Project 1</h2>
                     <h5>Project Title</h5>
-                    <div class="fakeimg" style="height:200px;"><img src="project2.jpg"></div>
+                    <div class="fakeimg" style="height:200px;"><img src="project2.jpg" alt="Featured Project 1"></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lorem turpis, tempor eu sem quis, congue sagittis eros. Integer odio quam, imperdiet malesuada mauris rhoncus, scelerisque pretium ipsum. Curabitur rutrum sed nibh in ullamcorper. Mauris sed nisl in justo venenatis posuere. Nullam id neque commodo, luctus risus id, tristique quam. Quisque volutpat massa facilisis leo sollicitudin, nec imperdiet nulla lacinia. Etiam rutrum leo eget mi faucibus, nec venenatis magna viverra. Integer odio arcu, volutpat eu ligula vitae, congue sollicitudin massa. Ut eget finibus mauris, vel laoreet diam.</p>
                   </div>
                   <div class="card">
                     <h2>Featured Project 2</h2>
                     <h5>Project Title</h5>
-                    <div class="fakeimg" style="height:200px;"><img src="project1.jpg"></div>
+                    <div class="fakeimg" style="height:200px;"><img src="project1.jpg" alt="Featured Project 2"></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lorem turpis, tempor eu sem quis, congue sagittis eros. Integer odio quam, imperdiet malesuada mauris rhoncus, scelerisque pretium ipsum. Curabitur rutrum sed nibh in ullamcorper. Mauris sed nisl in justo venenatis posuere. Nullam id neque commodo, luctus risus id, tristique quam. Quisque volutpat massa facilisis leo sollicitudin, nec imperdiet nulla lacinia. Etiam rutrum leo eget mi faucibus, nec venenatis magna viverra. Integer odio arcu, volutpat eu ligula vitae, congue sollicitudin massa. Ut eget finibus mauris, vel laoreet diam.</p>
                   </div>
                 </div>
@@ -40,14 +40,11 @@
                   </div>
                   <div class="card">
                     <h3>Projects</h3>
-                    <div class="fakeimg"><p><img src="project3.jpg"></p></div>
-                    <div class="fakeimg"><p>Image</p></div>
-                    <div class="fakeimg"><p>Image</p></div>
+                    <div class="fakeimg"><p><img src="project3.jpg" alt="Project 1"></p></div>
+                    <div class="fakeimg"><p><img src="project4.jpg" alt="Project 2"></p></div>
+                    <div class="fakeimg"><p><img src="project5.jpg" alt="Project 3"></p></div>
                   </div>
-                  <div class="card">
-                    <h3>Follow Me</h3>
-                    <p>Some text..</p>
-                  </div>
+
                 </div>
               </div>
               
